Bug 160071 - Clone formatting allows to fill all paragraphs with the same formatting
Summary: Clone formatting allows to fill all paragraphs with the same formatting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Clone-Formatting
  Show dependency treegraph
 
Reported: 2024-03-06 17:54 UTC by Gabor Kelemen (Collabora)
Modified: 2024-03-11 09:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The example file after clicking Clone Formatting on the empty area of the textbox (35.99 KB, image/png)
2024-03-06 17:54 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-03-06 17:54:19 UTC
Created attachment 193002 [details]
The example file after clicking Clone Formatting on the empty area of the textbox

When the Clone Formatting is applied to an empty area of a textbox, all paragraphs in the textbox get the cloned formatting.

1. Open attachment 192963 [details]
2. Highlight one of the paragraphs, for example the red colored one
3. Press the Clone Formatting button
4. Click on an empty area of the textbox
-> every paragraph gets the cloned formatting

It would make sense to not apply the cloned formatting at all if the click arrives on a clear area in a textbox (this is what PP 2016 does, and what older LO did).

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e939685f9c6918830bd3097062790bfccbce937e
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: de-DE
Calc: default

Seems to have started in 6.1, with:

https://git.libreoffice.org/core/+/d799436414ab7e28b6bf9a918fd3779b3fc85008

commit d799436414ab7e28b6bf9a918fd3779b3fc85008	[log]
author	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	Wed Mar 14 14:25:44 2018 +0100
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	Wed Mar 14 20:04:54 2018 +0100

tdf#116342 Allow selecting text boxes anywhere by default
Comment 1 raal 2024-03-06 21:54:40 UTC
Confirm with Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 806362b915ee89a4f907905a8ac8c1527ea99223
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 2 Samuel Mehrbrodt 2024-03-07 21:53:31 UTC
Patch up here: https://gerrit.libreoffice.org/c/core/+/164555
Comment 3 Commit Notification 2024-03-08 03:33:45 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9476f5ae4bff9817b9e699f7abea5690ec7ffd87

tdf#160071 Don't clone formatting to whole boxes

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.