tdf#160071 Don't clone formatting to whole boxes

when clicking into an empty area of that box

Change-Id: I383f1584f446e29454eda2177c8bae0f6587e42d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164555
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>